--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Node.js server for syncpad-client.",
   "main": "main.js",
-   "scripts": {
+  "scripts": {
     "start": "node main.js"
   },
   "author": "jpann",
@@ -14,5 +14,8 @@
     "socketio-auth": "^0.1.0",
     "sqlite": "^2.5.0",
     "prompt": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0"
   }
 }
