--- a/config.json
+++ b/config.json
@@ -1,4 +1,17 @@
 {
-    "port" : 3000,
-    "database_file" : "./db/database.db"
+    "database_file" : "./db/database.db",
+    "socketService" : 
+    {
+        "port" : 3000,
+        "secure" : false,
+        "secure_cert" : "./certs/syncpad.pem",
+        "secure_key" : "./certs/syncpad.crt"
+    },
+    "httpService" : 
+    {
+        "port" : 80,
+        "secure" : false,
+        "secure_cert" : "./certs/syncpad.pem",
+        "secure_key" : "./certs/syncpad.crt"
+    }
 }
