--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "guid": "0.0.12",
+    "moment": "^2.18.1",
     "morgan": "^1.8.1",
+    "node-datetime": "^1.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "password-hash": "^1.2.2",
