--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "async": "^2.4.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "connect": "^3.6.1",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
+    "connect-sqlite3": "^0.9.9",
     "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^4.0.0",
