--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "password-hash": "^1.2.2",
     "socket.io": "^1.7.3",
     "socketio-auth": "^0.1.0",
-    "sqlite": "^2.6.0"
+    "sqlite": "^2.6.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "eslint": "^3.19.0"
