--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "syncpad-server",
-  "version": "0.1.0",
   "description": "Node.js server for syncpad-client.",
-  "main": "main.js",
+  "version": "0.2.0",
+  "private": true,
   "scripts": {
-    "start": "node main.js"
+    "start": "set DEBUG=syncpad-server:* & node ./bin/www"
   },
   "author": "jpann",
   "dependencies": {
@@ -17,21 +17,21 @@
     "connect-sqlite3": "^0.9.9",
     "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
+    "debug": "~2.6.3",
     "dotenv": "^4.0.0",
-    "ejs": "^2.5.6",
-    "express": "^4.15.2",
+    "ejs": "~2.5.6",
+    "express": "~4.15.2",
     "express-session": "^1.15.2",
     "guid": "0.0.12",
-    "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.1",
-    "node-datetime": "^1.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "password-hash": "^1.2.2",
-    "socket.io": "^1.7.3",
-    "socketio-auth": "^0.1.0",
-    "sqlite": "^2.6.0",
+    "serve-favicon": "~2.4.2",
+    "socket.io": "^2.0.1",
+    "sqlite": "^2.7.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
