--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
     "password-hash": "^1.2.2",
+    "rotating-file-stream": "^1.2.2",
     "serve-favicon": "~2.4.2",
     "shortid": "^2.2.8",
     "socket.io": "^2.0.1",
