--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-session": "^1.15.2",
+    "express-validator": "^3.2.0",
     "guid": "0.0.12",
     "moment": "^2.18.1",
     "morgan": "^1.8.1",
