--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "syncpad-server",
   "description": "Node.js server for syncpad-client.",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": true,
   "scripts": {
     "start": "set DEBUG=syncpad-server:* & node ./bin/www"
@@ -16,6 +16,7 @@
     "connect-flash": "^0.1.1",
     "connect-sqlite3": "^0.9.9",
     "cookie-parser": "^1.4.3",
+    "crypto": "0.0.3",
     "crypto-js": "^3.1.9-1",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
