--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
   "name": "syncpad-server",
   "description": "Node.js server for syncpad-client.",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "private": true,
   "scripts": {
     "start": "set DEBUG=syncpad-server:* & node ./bin/www"
   },
   "author": "jpann",
   "dependencies": {
-    "async": "^2.4.0",
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.17.1",
-    "connect": "^3.6.1",
+    "async": "^2.4.1",
+    "body-parser": "^1.17.2",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "connect-sqlite3": "^0.9.9",
     "cookie-parser": "^1.4.3",
-    "crypto": "0.0.3",
     "crypto-js": "^3.1.9-1",
-    "debug": "~2.6.3",
+    "debug": "^2.6.8",
     "dotenv": "^4.0.0",
-    "ejs": "~2.5.6",
-    "express": "~4.15.2",
-    "express-session": "^1.15.2",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "express-validator": "^3.2.0",
     "guid": "0.0.12",
     "human-readable-ids": "^1.0.1",
     "moment": "^2.18.1",
     "moniker": "^0.1.2",
-    "morgan": "^1.8.1",
+    "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport.socketio": "^3.7.0",
     "password-hash": "^1.2.2",
     "rotating-file-stream": "^1.2.2",
-    "serve-favicon": "~2.4.2",
+    "serve-favicon": "^2.4.3",
     "shortid": "^2.2.8",
-    "socket.io": "^2.0.1",
-    "sqlite": "^2.7.0",
+    "socket.io": "^2.0.2",
+    "sqlite": "^2.8.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
