--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-local": "^1.0.0",
     "password-hash": "^1.2.2",
     "rotating-file-stream": "^1.2.2",
+    "sanitize-html": "^1.14.1",
     "serve-favicon": "^2.4.3",
     "shortid": "^2.2.8",
     "socket.io": "^2.0.2",
