--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.2.5",
   "private": true,
   "scripts": {
-    "start": "set DEBUG=syncpad-server:* & node ./bin/www"
+    "start": "node ./bin/www",
+    "dev" : "set DEBUG=syncpad-server:* & node ./bin/www",
+    "prod" : "gulp uglify && node ./bin/www"
   },
   "author": "jpann",
   "dependencies": {
@@ -38,6 +40,14 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "eslint": "^3.19.0"
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-filter": "^5.0.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "pump": "^1.0.2"
   }
 }
