--- a/package.json
+++ b/package.json
@@ -1,55 +1,56 @@
 {
   "name": "syncpad-server",
   "description": "Server for a somewhat collaborative web-based text editor that uses encryption.",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "dev": "set DEBUG=syncpad-server:* & node ./bin/www",
-    "prod": "gulp uglify && node ./bin/www"
+    "prod": "gulp uglify && node ./bin/www",
+    "update:packages": "node wipe-dependencies.js && rm -rf node_modules && npm update --save-dev && npm update --save"
   },
   "author": "jpann",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.4.1",
-    "body-parser": "^1.17.2",
-    "connect-ensure-login": "^0.1.1",
-    "connect-flash": "^0.1.1",
-    "connect-sqlite3": "^0.9.9",
-    "cookie-parser": "^1.4.3",
-    "crypto-js": "^3.1.9-1",
-    "debug": "^2.6.8",
-    "dotenv": "^4.0.0",
-    "ejs": "^2.5.6",
-    "express": "^4.15.3",
-    "express-session": "^1.15.3",
+    "async": "^3.1.0",
+    "body-parser": "*",
+    "connect-ensure-login": "*",
+    "connect-flash": "*",
+    "connect-sqlite3": "*",
+    "cookie-parser": "*",
+    "crypto-js": "^3.1.8",
+    "debug": "^4.1.1",
+    "dotenv": "^8.1.0",
+    "ejs": "*",
+    "express": "*",
+    "express-session": "*",
     "express-validator": "^3.2.0",
     "guid": "0.0.12",
-    "human-readable-ids": "^1.0.1",
-    "moment": "^2.18.1",
-    "moniker": "^0.1.2",
-    "morgan": "^1.8.2",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "password-hash": "^1.2.2",
-    "rotating-file-stream": "^1.2.2",
-    "sanitize-html": "^1.14.1",
-    "serve-favicon": "^2.4.3",
-    "shortid": "^2.2.8",
-    "socket.io": "^2.0.2",
-    "sqlite": "^2.8.0",
-    "underscore": "^1.8.3"
+    "human-readable-ids": "*",
+    "moment": "*",
+    "moniker": "*",
+    "morgan": "*",
+    "passport": "^0.4.0",
+    "passport-local": "*",
+    "password-hash": "*",
+    "rotating-file-stream": "*",
+    "sanitize-html": "*",
+    "serve-favicon": "*",
+    "shortid": "*",
+    "socket.io": "*",
+    "sqlite": "^3.0.3",
+    "underscore": "*"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "eslint": "^3.19.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-filter": "^5.0.0",
-    "gulp-flatten": "^0.3.1",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0",
-    "pump": "^1.0.2"
+    "babel-preset-es2015": "*",
+    "eslint": "*",
+    "gulp": "*",
+    "gulp-babel": "*",
+    "gulp-filter": "*",
+    "gulp-flatten": "*",
+    "gulp-minify-css": "*",
+    "gulp-rename": "*",
+    "gulp-uglify": "*",
+    "pump": "*"
   }
 }
