--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
     "underscore": "*"
   },
   "devDependencies": {
-    "babel-preset-es2015": "*",
-    "eslint": "*",
-    "gulp": "*",
-    "gulp-babel": "*",
-    "gulp-filter": "*",
-    "gulp-flatten": "*",
-    "gulp-minify-css": "*",
-    "gulp-rename": "*",
-    "gulp-uglify": "*",
-    "pump": "*"
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-filter": "^5.0.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0",
+    "pump": "^1.0.2"
   }
 }
