--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "connect-sqlite3": "*",
     "cookie-parser": "*",
     "crypto-js": "^3.1.8",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "*",
     "express-session": "*",
     "express-validator": "^3.2.0",
